--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
 								</div>
 							</div>
 
+<!-- In your puzzle HTML template -->
+<input id="typedMoves" type="text" placeholder="Type your move sequence…" style="width: 100%;">
+<button id="verifyMovesBtn">Verify</button>
+<div id="verificationMessage"></div>
 
 							<div class="container align-items-center p-3" style="text-align:center">
 
