--- a/index.html
+++ b/index.html
@@ -253,6 +253,30 @@
 
 						</div>
 
+<div class="container">
+    <!-- Left panel for next moves -->
+    <div class="next-moves">
+        <h3>Next Moves</h3>
+        <div class="move-boxes">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+            <input type="text" maxlength="5">
+        </div>
+    </div>
+
+    <!-- Chessboard -->
+    <div class="chessboard">
+        <!-- Your chessboard HTML goes here -->
+        <img src="your-chessboard-image.png" alt="Chessboard">
+    </div>
+</div>
 
 						<!-- Settings Modal -->
 						<div class="container">
