--- a/index.html
+++ b/index.html
@@ -271,12 +271,13 @@
         </div>
     </div>
 
-    <!-- Chessboard -->
-    <div class="chessboard">
-        <!-- Your chessboard HTML goes here -->
-        <img src="your-chessboard-image.png" alt="Chessboard">
-    </div>
+   
+   <!-- Verify Button Section -->
+<div class="chessboard">
+    <button class="verify-btn">Verify</button>
 </div>
+</div>
+
 
 						<!-- Settings Modal -->
 						<div class="container">
