--- a/index.html
+++ b/index.html
@@ -269,14 +269,16 @@
             <input type="text" maxlength="5">
             <input type="text" maxlength="5">
         </div>
+        <button class="verify-btn">Verify</button>
     </div>
 
-   
-   <!-- Verify Button Section -->
-<div class="chessboard">
-    <button class="verify-btn">Verify</button>
+    <!-- Chessboard -->
+    <div class="chessboard">
+        <!-- Your chessboard HTML goes here -->
+        <img src="your-chessboard-image.png" alt="Chessboard">
+    </div>
 </div>
-</div>
+
 
 
 						<!-- Settings Modal -->
